# Vector.Money.Sim

./: .gitignore  README.md  pyproject.toml  robots.md
configs/: example.yaml
docs/: README.md
docs/prompts/: add-archetypes.txt  add-data-normalisation.txt  add-gplv3-license.txt  add-yaml-config.txt  baseline-model.txt  complete-docs.txt  implement-market.txt
notebooks/: inequality.ipynb  overshoot.ipynb  return_time.ipynb  welfare.ipynb
pandas/: __init__.py
scripts/: run_simulation.py
src/: __init__.py  doughnut_abm.py  environment.py  metrics.py
src/agents/: __init__.py  financial_intermediary.py  firm.py  government.py  household.py
src/behavior/: __init__.py  archetypes.py
src/biophysics/: __init__.py  stocks.py
src/data/: __init__.py  io.py  normalise.py
src/markets/: __init__.py  market.py
src/models/: __init__.py  baseline.py
tests/: test_archetypes.py  test_baseline.py  test_biophysical.py  test_data.py  test_doughnut_abm.py  test_market.py
